update molecule detection

--- a/synthesis_data_script/visualization_for_mol_structure.ipynb
+++ b/synthesis_data_script/visualization_for_mol_structure.ipynb
@@ -18,6 +18,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## rgroup_type_2_dash"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 21,
    "metadata": {},
@@ -100,6 +107,13 @@
     "    draw.text((x-offset_size, y-offset_size), label, fill=\"red\", font=font)\n",
     "image.save(\"image/rgroup_type_2_dash_plot.png\")\n",
     "image"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## rgroup_type_2_wave_line"
    ]
   },
   {
@@ -188,6 +202,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## rgroup_type_2_dash_line"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 25,
    "metadata": {},
@@ -273,11 +294,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## normal_mol"
+   ]
   },
   {
    "cell_type": "code",
@@ -347,11 +368,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## uncertainty_position_v1"
+   ]
   },
   {
    "cell_type": "code",
@@ -411,6 +432,13 @@
     "    draw.text((x-offset_size, y-offset_size), label, fill=\"red\", font=font)\n",
     "image.save(\"image/uncertainty_position_v1_plot.png\")\n",
     "image"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## uncertainty_position_v1(indigo)"
    ]
   },
   {
@@ -482,6 +510,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## uncertainty_position_v2"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 36,
    "metadata": {},
@@ -539,6 +574,13 @@
     "    draw.text((x-offset_size, y-offset_size), label, fill=\"red\", font=font)\n",
     "image.save(\"image/uncertainty_position_v2_plot.png\")\n",
     "image"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## uncertainty_position_v2(is_indigo)"
    ]
   },
   {
@@ -600,6 +642,13 @@
     "    draw.text((x-offset_size, y-offset_size), label, fill=\"red\", font=font)\n",
     "image.save(\"image/uncertainty_position_v2_indigo_plot.png\")\n",
     "image"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## polymer"
    ]
   },
   {
